Change log for duff
===================

Maintained since version 0.3.1.

2015-08-13  Camilla Berglund  <dreda@dreda.org>

 * duff.c duff.h duffdriver.c dufffile.c duffstring.c duffstring.h duffutil.c:
 Changed indent width.

2013-09-13  Camilla Berglund  <dreda@dreda.org>

 * duffutil.c (set_digest_function): Changed to accept a string.
 * duff.h duff.c duffutil.c: Made all digest function selection logic local to
 util module.

2013-07-23  Camilla Berglund  <dreda@dreda.org>

 * dufffile.c (compare_files): Cleaned up devnode comparison logic.

2013-07-21  Camilla Berglund  <dreda@dreda.org>

 * dufffile.c duffutil.c: Removed superfluous casts of malloc and realloc.

2012-09-21  Camilla Berglund  <dreda@dreda.org>

 * duffdriver.c (follow_links_mode): Corrected type (credits to Michael
 Tautschnig).

2012-09-07  Camilla Berglund  <dreda@dreda.org>

 * join-duplicates.sh: Removed redundant use of touch(1).

2012-03-30  Camilla Berglund  <dreda@dreda.org>

 * configure.ac: Enabled ISO Standard C.

 * duff.h duffdriver.c: Corrected order of types and typedefs.

2012-02-19  Camilla Berglund  <dreda@dreda.org>

 * duffdriver.c (process_directory): Made asprintf error exit.

 * duffstring.c (vasprintf): Simplified allocation.
 * duffstring.c (vasprintf): Made internal buffer overflow an error.

 * join-duplicates.sh: Added missing IFS clearing.

2012-02-15  Camilla Berglund  <dreda@dreda.org>

 * duff.h duffutil.c (init_digest): Renamed from digest_init.
 * duff.h duffutil.c (update_digest): Renamed from digest_update.
 * duff.h duffutil.c (finish_digest): Renamed from digest_finish.

 * duff.1: Updated language on the different modes.
 * duff.1: Updated examples.
 * join-duplicates.sh: Fixed a few duff invocation bugs.

2012-02-13  Camilla Berglund  <dreda@dreda.org>

 * duff.1: Added documentation for -u flag.
 * duff.h (DUPLICATE): Renamed from REPORTED.
 * duffdriver.c (process_uniques): Added function.
 * duffdriver.c (process_args): Added logic for -u flag.